# febio_exporter

./: CHANGELOG.md  README.md  TODO.md  __init__.py  pyproject.toml  setup.py
examples/: febio_example_1.feb  febio_exporter_example1.py  febio_exporter_example2.py  febio_exporter_modular1.py  knee_data.py
examples/data/: cube.stl  cube_1.msh  cube_meshmixer.stl  femoral_cartilage.msh  graft_am.msh
examples/jobs/: febio_example_1.feb
examples/models/example_1/: febio_example_1.feb
examples/tests/: control_test.py  febio_test1.feb  febio_test2.feb  febio_test_control.feb  febio_test_control_multiple_steps.feb  febio_test_modular1.feb  model_test_discrete.feb
febio_exporter/: __init__.py  boundary.py  constraints.py  contact.py  discrete.py  febio_configure.py  initial.py  loaddata.py  loads.py  material.py  mesh.py  meshdata.py  model.py  restart.py  rigid.py  step.py  utils.py
febio_exporter_4/: __init__.py  boundary.py  constraints.py  contact.py  discrete.py  febio_configure.py  initial.py  loaddata.py  loads.py  material.py  mesh.py  meshdata.py  model.py  restart.py  rigid.py  step.py  utils.py
