[tool.poetry]
name = "febio-exporter"
version = "0.1.0"
description = ""
authors = ["konris87 <risvkostas87@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
sympy = "^1.10.1"
matplotlib = "^3.5.2"
meshio = "5.2.6"
vedo = "^2022.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
